Linkedin & GitHub links added

--- a/index.html
+++ b/index.html
@@ -163,8 +163,11 @@
         </div>
 
         <footer class="text-center">
-            <a href="https://www.linkedin.com/in/cristina-padilla-plasencia/" target="_blank">©️ Coded by Cristina
-                Padilla</a>
+            <span class="copyright">©️ Coded by Cristina Padilla</span>
+            <a href="https://github.com/Mama-simba/my-weather-app" target="_blank">
+                <i class="fab fa-github-square"></i></a>
+            <a href="https://www.linkedin.com/in/cristina-padilla-plasencia/" target="_blank">
+                <i class="fab fa-linkedin"></i></a>
         </footer>
 
         <script type="text/javascript" src="src/index.js"></script>
