Main weather icon fixed

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                     <div class="main-weather d-flex justify-content-center">
                         <div class="left-box text-center">
-                            <img class="icon-today-weather" src="images/snowflake.png" alt="Current weather icon" />
+                            <img class="icon-today-weather" id="main-icon" src="images/snowflake.png" alt="Current weather icon" />
                             <p id="weather-description">Snow</p>
                         </div>
                         <div class="right-box text-center">
