Search engine fixed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="row mt-4 mb-3">
                     <form>
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Enter your city"
+                            <input type="text" id="city-input" class="form-control" placeholder="Enter your city"
                                 aria-label="Recipient's username with two button addons" value="" />
                             <button class="search-button" type="button">
                                 <i class="fas fa-search-location"></i>
