Celsius & Fahrenheit conversion added

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                             <a href="#" class="unit-type" id="fahrenheit">°F</a>
                             <div class="max-min-temp">
                                 <i class="fas fa-thermometer-three-quarters"></i>
-                                <span class="max" id="max-temp">7°|</span>
+                                <span class="max" id="max-temp"></span><span>°</span>
                                 <i class="fas fa-thermometer-quarter"></i>
-                                <span class="min" id="min-temp">2°</span>
+                                <span class="min" id="min-temp"></span><span>°</span>
                             </div>
                         </div>
                     </div>
