--- a/index.html
+++ b/index.html
@@ -71,39 +71,9 @@
 
                 <hr />
 
-                <!--WEATHER PER HOUR-->
-                <div class="d-flex justify-content-center flex-wrap">
-                    <div class="hour-box">
-                        <h4 class="text-center">Now</h4>
-                        <img class="hour-weather-icon" src="images/snowflake.png" alt="Snow icon" />
-                        <h4 class="text-center">-8°C</h4>
-                    </div>
-                    <div class="hour-box">
-                        <h4 class="text-center">16</h4>
-                        <img class="hour-weather-icon" src="images/snowflake.png" alt="Snow icon" />
-                        <h4 class="text-center">-8°C</h4>
-                    </div>
-                    <div class="hour-box">
-                        <h4 class="text-center">17</h4>
-                        <img class="hour-weather-icon" src="images/cloud.png" alt="Clouds icon" />
-                        <h4 class="text-center">-8°C</h4>
-                    </div>
-                    <div class="hour-box">
-                        <h4 class="text-center">18</h4>
-                        <img class="hour-weather-icon" src="images/cloud.png" alt="Clouds icon" />
-                        <h4 class="text-center">-8°C</h4>
-                    </div>
-                    <div class="hour-box">
-                        <h4 class="text-center">19</h4>
-                        <img class="hour-weather-icon" src="images/snowflake.png" alt="Snow icon" />
-                        <h4 class="text-center">-9°C</h4>
-                    </div>
-                    <div class="hour-box">
-                        <h4 class="text-center">20</h4>
-                        <img class="hour-weather-icon" src="images/snowflake.png" alt="Snow icon" />
-                        <h4 class="text-center">-9°C</h4>
-                    </div>
-                </div>
+                <!--FORECAST PER HOUR-->
+                <div class="forecast d-flex justify-content-center flex-wrap" id="forecast"></div>
+
 
                 <hr />
 
