Geolocation fixed and daily forecast hidden

--- a/index.html
+++ b/index.html
@@ -69,14 +69,15 @@
                     </ul>
                 </div>
 
-                <hr />
+                <hr /> 
 
                 <!--FORECAST PER HOUR-->
-                <div class="forecast d-flex justify-content-center flex-wrap" id="forecast"></div>
+                <div class="forecast d-flex justify-content-center flex-wrap p-2" id="forecast"></div>
 
+                
                 <hr />
 
-                <!-- PER DAY -->
+                <!-- PER DAY 
                 <div class="d-flex justify-content-around">
                     <div class="weekdays d-flex flex-column text-light">
                         <p class="pt-3">Tuesday</p>
@@ -127,7 +128,7 @@
                         <p class="pt-3"><i class="fas fa-thermometer-quarter"></i> -8°C</p>
                         <p class="pt-3"><i class="fas fa-thermometer-quarter"></i> -6°C</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
